Fixing useless scrollbar

--- a/styles/pages/Sheet.scss
+++ b/styles/pages/Sheet.scss
@@ -1,3 +1,7 @@
+.tab-set > .tab.sheet {
+	overflow-x: hidden;
+}
+
 .sheet.page {
   font-size: .8em;
 
